--- a/Suberunker/Suberunker/Suberunker.vcxproj.filters
+++ b/Suberunker/Suberunker/Suberunker.vcxproj.filters
@@ -27,9 +27,18 @@
     <ClInclude Include="Suberunker.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="GameNode.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MainGame.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Suberunker.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MainGame.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
