Classification in progress

--- a/Suberunker/Suberunker/Suberunker.vcxproj
+++ b/Suberunker/Suberunker/Suberunker.vcxproj
@@ -29,7 +29,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -141,7 +141,7 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameNode.h" />
-    <ClInclude Include="MainGame.h" />
+    <ClInclude Include="MainNode.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Suberunker.h" />
     <ClInclude Include="targetver.h" />
