--- a/Suberunker/Suberunker/Suberunker.vcxproj.filters
+++ b/Suberunker/Suberunker/Suberunker.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClInclude Include="GameNode.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="MainGame.h">
+    <ClInclude Include="MainNode.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
